[bp/r68822][FIX] maps: Map tiles were all squished up when in the locator module Manual backport as we're on LESS in 18.x, not SCSS, regression from r68915

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3335,9 +3335,15 @@ body > .ui-front {
   bottom: 3px;
   text-align: right;
 }
-div.olMap {
+
+.olMap {
   position: relative;
   display: block;
+}
+
+#col2 .olMap img,
+#col3 .olMap img {
+  max-width: none;
 }
 /*** ESSENTIAL STYLES ***/
 .cssmenu_horiz,
